# WxWave

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
lib/: CMakeLists.txt
scripts/: ui_create_frame.sh
src/: time.hh  trace.cc  trace.hh
src/file/: ghw.cc  ghw.hh
src/ui/: MainFrame.cc  MainFrame.hh  UIBase.cpp  UIBase.fbp  UIBase.h  WaveViewerControl.cc  WaveViewerControl.hh  app.cc  app.hh
